# python_module_00_01_02_03_04_05_06_07_08_09

python_module_00/ex0/: ft_garden_intro.py  ft_hello_garden.py
python_module_00/ex1/: ft_garden_data.py  ft_garden_name.py
python_module_00/ex2/: ft_plant_growth.py
python_module_00/ex4/: ft_plant_age.py
python_module_01/ex3/: ft_plant_factory.py
python_module_01/ex6/: ft_garden_analytics.py
python_module_02/ex0/: ft_first_exception.py
python_module_02/ex1/: ft_raise_exception.py
python_module_02/ex2/: ft_different_errors.py
python_module_02/ex3/: ft_custom_errors.py
python_module_03/ex1/: ft_score_analytics.py
python_module_03/ex2/: ft_coordinate_system.py
python_module_03/ex3/: ft_achievement_tracker.py
python_module_04/data-generator-tools/: sample_data.json
python_module_04/ex0/: ft_ancient_text.py
python_module_04/ex1/: ft_archive_creation.py
python_module_06/: ft_alembic_1.py  ft_alembic_4.py  ft_alembic_5.py  ft_kaboom_1.py  ft_transmutation_2.py
python_module_06/alchemy/: __init__.py
python_module_07/: battle.py  capacitor.py
python_module_07/ex0/: __init__.py  aqua.py  creature.py  flame.py
python_module_07/ex1/: __init__.py  capability.py  heal.py  transform.py
python_module_08/: construct.py  pruebas_pandas_requests_matplotlib_numpy_importlib.py  pruebas_sys_os_site.py
python_module_08/ex0/: construct.py
python_module_08/ex1/: loading.py  pyproject.toml  requirements.txt
python_module_08/ex2/: oracle.py
python_module_09/: pruebas.py
python_module_09/ex0/: space_station.py
python_module_10/: pruebas.py
(+11 files in other folders)
