[tool.poetry]
name = "matrix"
version = "0.1.0"
description = "Matrix data analysis"
authors = ["jaitowerr"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.3.3"
numpy = "2.2.6"
matplotlib = "3.10.8"
requests = "2.33.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"